<resources>
    <string name="app_name">my_app</string>
    <string name="faculty_of_engineering">Faculty of engineering</string>
    <string name="fe">មហាវិទ្យាល័យ វិស្វកម្ម</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="do_not_have_account">Do not have account?</string>
    <string name="register">Register</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_have_account">You have account?</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_account">Already have account?</string>
    <string name="supply_chain_automation_engineering">SCA</string>
    <string name="information_technology_engineering">ITE</string>
    <string name="bio_engineering">BIO</string>
    <string name="telecommunication_electric_engineering">TEE</string>
    <string name="environmental_engineering">DEE</string>
</resources>