<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/image1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="230dp"
            app:srcCompat="@drawable/notification_bell_1397_svgrepo_com" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="370dp"
        android:layout_height="180dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_Slider"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:iss_auto_cycle="true"
            app:iss_delay="3000"
            app:iss_period="3000"
            />
    </androidx.cardview.widget.CardView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout"
        android:rowCount="2"
        android:columnCount="3"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="180dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:src="@drawable/sca_image_logo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/supply_chain_automation_engineering"
                    android:fontFamily="@font/roboto2"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="0dp"
                    />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/videoCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:src="@drawable/ite_image_logo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/information_technology_engineering"
                    android:fontFamily="@font/roboto2"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/audioCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="8dp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:src="@drawable/bio_image_logo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/bio_engineering"
                    android:fontFamily="@font/roboto2"
                    android:textSize="20dp"
                    android:textAlignment="center"

                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/docCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/tee_image_logo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/telecommunication_electric_engineering"
                    android:fontFamily="@font/roboto2"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/downloadCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:src="@drawable/dee_image_logo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/environmental_engineering"
                    android:fontFamily="@font/roboto2"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"

                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>